--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,3 +3,4 @@
     <h2>Welcome to our website TodoList</h2>
     <h4>Click <a href="/ListEntries">here</a> to view your TodoList.</h4>
 </body>
+</html>
